    lkr/12c509a_g.lkr, lkr/16c505_g.lkr, lkr/16c58a_g.lkr,
    lkr/12ce519_g.lkr, lkr/rf509af_g.lkr, lkr/12cr509a_g.lkr:
    fixed bug #3545482 - "Correction of gpprocessor.c and some lkr file.",
    thanks to Molnar Karoly
  * libgputils/gpprocessor.c: applied patch
    #3545897 - "Fix the coff_type differences of gpprocessor.c.",
    thanks to Molnar Karoly

2011-07-18  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/directive.c: fixed bug
    #2876860 - "MOVFF should not allow indexed literal offsets"

2011-07-17  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c: applied patch gpprocessor.c-3.patch.tar.7z
    #3544649 - "Incorrect lines in the gpprocessor.c II.",
    thanks to Molnar Karoly

2011-07-16  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c: applied patch gpprocessor.c-2.patch.tar.7z
    #3544649 - "Incorrect lines in the gpprocessor.c II.",
    thanks to Molnar Karoly

2011-07-15  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c: applied patch
    #3544356 - "Incorrect lines in the gpprocessor.c",
    thanks to Molnar Karoly

2011-07-14  Borut Razem  <borutr@users.sourceforge.net>
  * libgputils/gpprocessor.c, lkr/16lf1786_g.lkr, lkr/16lf1787_g.lkr,
    lkr/16f1786_g.lkr, lkr/16f1787_g.lkr: applied patch
    #3543935 - "Correction of 16l?f178[67]_g.lkr and gpprocessor.c",
    thanks to Molnar Karoly
  * header/p18cxxx.inc: applied patch
    #3543963 - "Correction of p18cxxx.inc",
    thanks to Molnar Karoly
  
2012-07-13  Marko Kohtala  <marko.kohtala@gmail.com>
  * libgputils/gpcfg-table.c: Updated using scripts/tools/cfg-import.py
    to add configuration options for new parts from MPASM 5.46.

2011-07-10  Borut Razem  <borutr@users.sourceforge.net>
  * lkr/16f818_g.lkr, lkr/16f1513_g.lkr, lkr/16f1455_g.lkr,
    lkr/16lf1513_g.lkr, lkr/16lf1455_g.lkr, lkr/16f527_g.lkr,
    lkr/12lf1552_g.lkr, lkr/Makefile.am, lkr/Makefile.in,